# unpaper-gpu

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  file.c  meson.build  meson_options.txt  parse.c  pytest.ini  sheet_process.c  sheet_process.h  unpaper.c  unpaper.h
build-scripts/: ptx2c.py
doc/: CUDA_BACKEND_HISTORY.md  PDF_SUPPORT_ROADMAP.md  basic-concepts.md  file-formats.md  nvimgcodec_migration_baseline.md  unpaper.1.rst
imageprocess/: backend.c  backend.h  backend_cuda.c  backend_cuda_blit.c  backend_cuda_deskew.c  backend_cuda_filters.c  backend_cuda_internal.h  backend_cuda_masks.c  backend_cuda_stub.c  blit.c  blit.h  cuda_kernels.cu  cuda_kernels_blit.cu  cuda_kernels_common.cuh  cuda_kernels_deskew.cu  cuda_kernels_filters.cu  cuda_kernels_format.h  cuda_kernels_masks.cu  cuda_mempool.c  cuda_mempool.h  cuda_runtime.c  cuda_runtime.h  cuda_stream_pool.c  cuda_stream_pool.h  deskew.c  filters.c  image.c  image.h  image_cuda.c  masks.c  npp_integral.c  npp_integral.h  npp_wrapper.c  npp_wrapper.h  nvimgcodec.c  nvimgcodec.h  nvjpeg_decode.c  nvjpeg_decode.h  nvjpeg_encode.c  nvjpeg_encode.h  (+5 more)
lib/: batch.c  batch.h  batch_decode_queue.c  batch_decode_queue.h  batch_worker.c  batch_worker.h  decode_queue.c  decode_queue.h  decoded_image_provider.c  decoded_image_provider.h  encode_queue.c  encode_queue.h  gpu_monitor.c  gpu_monitor.h  jbig2_decode.c  jbig2_decode.h  logging.c  logging.h  options.c  options.h  perf.c  perf.h  threadpool.c  threadpool.h
pdf/: pdf_page_accumulator.c  pdf_page_accumulator.h  pdf_perf.c  pdf_perf.h  pdf_pipeline_batch.c  pdf_pipeline_batch.h  pdf_pipeline_cpu.c  pdf_pipeline_cpu.h  pdf_pipeline_cpu_batch.c  pdf_pipeline_cpu_batch.h  pdf_pipeline_decode.c  pdf_pipeline_decode.h  pdf_pipeline_gpu.c  pdf_pipeline_gpu.h  pdf_reader.c  pdf_reader.h  pdf_reader.h.license  pdf_writer.c  pdf_writer.h
src/cli/: cli_main.c  cli_options.c  cli_options.h
src/core/: sheet_pipeline.c  sheet_pipeline.h  sheet_stages.c  sheet_stages.h
src/pipeline/: image_pipeline.c  image_pipeline.h  pdf_pipeline.c  pdf_pipeline.h
tests/: cli_options_test.c  cuda_blurfilter_scan_test.c  cuda_deskew_test.c  cuda_filters_test.c  cuda_grayfilter_scan_test.c  cuda_masks_border_test.c  cuda_primitives_test.c  cuda_resize_test.c  cuda_roundtrip_test.c  cuda_stream_test.c  gpu_jpeg_pipeline_tests.py  jbig2_decode_test.c  npp_integral_test.c  nvimgcodec_test.c  nvjpeg_batched_test.c  nvjpeg_decode_test.c  nvjpeg_encode_test.c  opencv_bridge_test.c  pdf_pipeline_cpu_test.c  pdf_reader_test.c  pdf_writer_test.c  sheet_stages_test.c  unpaper_tests.py
tests/golden_images/: goldenC1.ppm
tests/pdf_samples/: benchmark_jbig2_50page.pdf.license
tests/source_images/: imgsrc006.png.license
tools/: bench_a1.py  bench_batch.py  bench_double.py  bench_jbig2_pdf.py  bench_jpeg_pipeline.py  bench_pdf.py  bench_pdf_jpeg_pipeline.py  build_opencv_cuda.sh  create_jbig2_benchmark_pdf.py  diagnose_scaling.py  pipeline_analysis.py  tune_png_batch.py
